<resources>
    <string name="app_name">Petbaazar</string>
    <string name="to_start_buying_and_selling">The best marketplace for pets and animals</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="log_in">Continue</string>
    <string name="title_activity_web">WebActivity</string>
    <string name="by_continuing_you_agree_to_our_terms_and_conditions">By continuing, you agree to our terms and Conditions</string>
    <string name="login">Login</string>
    <!--<string name="facebook_app_id">1426136754352468</string>-->
    <string name="facebook_app_id">1160275140758012</string>
    <string name="skip">Skip</string>
    <string name="title_activity_login">Login / Register</string>
    <string name="fb_login_protocol_scheme">fb1426136754352468</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="sell_fragment">I want to Sell</string>
    <string name="buy_fragment">I want to Buy</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="add_product">Add your product</string>
    <string name="take_a_picture_of_your_pet">Take a picture of your pet</string>
    <string name="open_camera">Open Camera</string>
    <string name="open_gallery">Open Gallery</string>
    <string name="sell_icon">sell icon</string>
    <string name="enter_mobile_number">Enter Mobile Number</string>
    <string name="facebook">Facebook</string>
    <string name="or">OR</string>
    <string name="petbaazar_icon">petbaazar icon</string>
    <string name="buy_icon">buy icon</string>
    <string name="title_activity_option">OptionActivity</string>
    <string name="otp_msg">An OTP will be sent and read if given number is not verified</string>
    <string name="otp_msg_extra">Verifying your number creates trust and increase your chances of getting the right deal.</string>
    <string name="already_a_seller_on_petbaazar_login_here">Already a seller on Petbaazar? Login here</string>
    <string name="create_your_store_now">Create your store now</string>
    <string name="email_address">Email Address</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login_sell_first">Login</string>
    <string name="not_a_seller_yet">Not a seller yet?</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember Me</string>
    <string name="continues">Continue</string>
    <string name="city_or_town">City or Town</string>
    <string name="reset_password">Reset Password</string>

    <array name="business_type">
        <item>Select a type</item>
        <item>Privately-owned business</item>
        <item>State-owned business</item>
        <item>Publicly-listed business</item>
        <item>Charity</item>
        <item>None, I am an individual</item>
    </array>
    <array name="pets">
        <item>Select a category</item>
        <item>Cats</item>
        <item>Dogs</item>
        <item>Fishes</item>
        <item>Parrots</item>
        <item>Pigeons</item>
        <item>Other</item>
    </array>
    <array name="Cats">
        <item>BRITISH SEMI-LONG HAIR</item>
        <item>AEGEAN</item>
        <item>ARABIAN CATS</item>
        <item>BIRMAN</item>
        <item>ASIAN SEMI-LONG HAIR</item>
        <item>BRITISH LONG HAIR</item>
        <item>BURMILLA</item>
    </array>

    <array name="Dogs">
        <item>ANATOLIAN SHEPHERD DOG</item>
        <item>BLACK AND TAN COONHOUND</item>
        <item>BOERBOEL</item>
        <item>OLD GERMAN SHEPHERD DOG</item>
        <item>AMERICAN ESKIMO DOG</item>
    </array>

    <array name="Fishes">
        <item>CHERRY BARD</item>
        <item>DWARF GOURAMI</item>
        <item>GOLD BARD</item>
        <item>GOLD FISH</item>
        <item>PEARL GOURAMI</item>
    </array>

    <array name="Parrots"></array>
    <array name="Pigeons">
        <item>INDIAN FANTACY</item>
        <item>INDIAN FANTAIL</item>
        <item>INDIAN GOLA</item>
        <item>INDIAN MONDAIN</item>
        <item>INDIAN PEARL HIGHFLIER</item>
    </array>
    <string name="title_activity_petbaazar_seller_main">Petbaazar</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Logout</string>
    <string name="home">Home</string>
    <string name="orders">Orders</string>
    <string name="catalogue">Catalogue</string>
    <string name="payments">Payments</string>
    <string name="returnp">Returns</string>
    <string name="communicate">Communicate</string>
    <string name="settings">Settings</string>
    <string name="add_your_product_to_petbaazar">Add your product to Petbaazar</string>
    <string name="change_mobile_number">Change Mobile Number</string>
    <string name="change_mobile_number_activity_string">Change Mobile Number</string>
    <string name="enter_new_mobile_number">Enter new mobile number</string>
    <string name="submit">Submit</string>
    <string name="cancel">Cancel</string>
    <string name="submit_pass_reset">Submit</string>
    <string name="find_pet">Find Pet</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="welcome_seller">Welcome Seller</string>
    <string name="email_gmail_com">email@gmail.com</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="returns">Returns</string>
    <string name="_personal_details_email_address">Email Address</string>
    <string name="personal_details_residential_address">Residential Address</string>
    <string name="enter_email_id_here">Enter Email id here</string>
    <string name="set_password">Set Password</string>
    <string name="enter_password">Enter Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="street_or_locality">Street or Locality</string>
    <string name="house_number_or_building">House number or Building</string>
    <string name="postcode_pin">Postcode / PIN</string>
    <string name="country">Country</string>
    <string name="middle_name">Middle name</string>
    <string name="last_name">Last name</string>
    <string name="first_name">First name</string>
    <string name="personal_information">Personal information</string>
    <string name="enter_pet_type">Enter Pet Type</string>
    <string name="enter_breed">Enter Breed</string>
    <string name="select_pet_breeds">Select Pet Breeds</string>
    <string name="ad_title">Ad title</string>
    <string name="ad_description">Ad Description</string>
    <string name="add_picture">add picture</string>
    <string name="add_picture_text">Add Picture</string>
    <string name="picture_taken">picture taken</string>
    <string name="your_contact_information">Your contact information</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="address">Address</string>
    <string name="mobile">Mobile</string>
    <string name="post_your_ad">Post Your Ad</string>
    <string name="category">Category</string>
    <string name="post_free_ad">Post Free Ad</string>
    <string name="petbaazar_logo">Petbaazar logo</string>
    <string name="sell_product">Sell Product</string>
    <string name="post_ads">Post Ads</string>
</resources>
