<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_sell_product_first"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="30dp"
    android:layout_marginRight="30dp"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.brandtechnosolutions.petbaazar.SellProductFirstActivity">

    <ImageView
        android:id="@+id/seller_first_image_id"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:paddingRight="50dp"
        android:src="@drawable/cart_copy1" />

    <TextView
        android:id="@+id/already_seller"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/seller_first_image_id"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal"
        android:text="@string/already_a_seller_on_petbaazar_login_here"
        android:textColor="@android:color/black" />

    <EditText
        android:id="@+id/seller_email_edit_text_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/seller_first_image_id"
        android:layout_marginTop="50dp"
        android:ems="10"
        android:hint="@string/email_address"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/password_edit_text_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/seller_email_edit_text_id"
        android:layout_marginTop="27dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <CheckBox
        android:id="@+id/remember_me_checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/password_edit_text_id"
        android:checked="true"
        android:text="@string/remember_me"
        android:textColor="@android:color/black" />

    <TextView
        android:id="@+id/forgot_password_textview_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/password_edit_text_id"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="7dp"
        android:gravity="right"
        android:onClick="forgotPassword"
        android:text="@string/forgot_password"
        android:textColor="@color/PrimaryColor"
        android:textStyle="bold" />

    <Button
        android:id="@+id/seller_first_login_button_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/remember_me_checkBox"
        android:layout_marginTop="15dp"
        android:background="@drawable/button_border"
        android:onClick="sellerLogin"
        android:text="@string/login_sell_first"
        android:textColor="@android:color/white" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/seller_first_login_button_id"
        android:layout_marginTop="15dp"
        android:gravity="left"
        android:text="@string/not_a_seller_yet"
        android:textColor="@android:color/black" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@id/seller_first_login_button_id"
        android:layout_marginTop="15dp"
        android:gravity="right"
        android:onClick="createSellerAccount"
        android:text="@string/create_your_store_now"
        android:textColor="@color/PrimaryColor"
        android:textStyle="bold" />
</RelativeLayout>
